--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "lodash": "^4.17.21",
     "mongoose": "^5.12.1",
     "winston": "^3.3.3"
+  },
+  "engines": {
+    "node": "15.5.1"
   }
 }
