--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -7,18 +7,27 @@ on:
   push:
     branches:
       - main
+  release:
+    types: [created]  # Trigger when a new release is created
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+        
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: 16
-      # - run: npm ci
-      # - run: npm test
-
+        
+      - name: Install dependencies
+        run: npm ci  # Uncomment this if you want to install dependencies before testing
+      
+      - name: Run tests
+        run: npm test  # Uncomment this to run tests before publishing
+      
   publish-gpr:
     needs: build
     runs-on: ubuntu-latest
@@ -26,12 +35,16 @@ jobs:
       contents: read
       packages: write
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
-      - run: npm ci
-      - run: npm publish
+        
+      - name: Install dependencies
+        run: npm ci
+        
+      - name: Publish package
+        run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.ACCESS_TOKEN}}
+          NODE_AUTH_TOKEN: ${{ secrets.ACCESS_TOKEN }} 
