--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -1,6 +1,3 @@
-# This workflow will run and then publish a package to GitHub Packages when a release is created
-# For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
-
 name: Node.js Package
 
 on:
@@ -8,9 +5,9 @@ on:
     branches:
       - main
     paths:
-      - index.js  # Trigger only on changes to index.js
+      - index.js
   release:
-    types: [created]  # Trigger when a new release is created
+    types: [created]
 
 jobs:
   build:
@@ -19,13 +16,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         
+      - name: Print working directory
+        run: pwd
+
+      - name: List files
+        run: ls -R
+        
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 16
         
       - name: Install dependencies
-        run: npm install  # Install based on package.json
+        run: npm install
 
   publish-gpr:
     needs: build
@@ -41,7 +44,7 @@ jobs:
           registry-url: https://npm.pkg.github.com/
         
       - name: Install dependencies
-        run: npm install  # Install based on package.json
+        run: npm install
         
       - name: Publish package
         run: npm publish
