--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
-  "name": "node_internship_task",
+  "name": "multiuser-authenticator",
   "version": "1.0.0",
-  "description": "\"Creating basic api for CRUD opration and  some basic task\"",
+  "description": "This API is designed to streamline user authentication and authorization, significantly reducing the time and effort required for secure implementation. Built using Node.js, Express.js, and JWT tokens, it seamlessly integrates JWT token-based authentication and Role-based access control (RBAC).",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "authentication",
+    "authorization",
+    "jwt",
+    "rbac",
+    "express",
+    "nodejs",
+    "security"
+  ],
+  "author": "Durgesh Tiwari",
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "express": "^4.17.1",
+    "express-rate-limit": "^6.7.0",
+    "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "mongoose": "^5.12.1"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   },
   "repository": {
     "type": "git",
     "url": "git@github.com:blackhat955/internship_task_project.git"
-  },
-  "author": "Durgesh Tiwari",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/blackhat955/internship_task_project/issues"
-  },
-  "homepage": "https://github.com/blackhat955/internship_task_project#readme",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "config": "^3.3.6",
-    "express": "^4.17.1",
-    "joi": "^17.4.0",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.21",
-    "mongoose": "^5.12.1",
-    "winston": "^3.3.3"
-  },
-  "engines": {
-    "node": "15.5.1"
   }
 }
